--- a/test.html
+++ b/test.html
@@ -1,9 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Testttttt</title>
-</head>
-<body>
-<h1>Testinggggg</h1>
-</body>
-</html>
+<h1>Testing</h1>
