--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 <div id="content-container" style="flex-grow: 1;">
                     <div class="wrapper">
                         <h1 style=center>Rovás Irás</h1>
-                            <h2 style=center>𐲘𐲐 𐲀𐲦𐲯𐲁𐲙</h2>
+                            <h2 style=center>𐲘𐲐 𐲀𐲨𐲁𐲙𐲓</h2>
                             <h3 style=center>Mi Atyánk</h3>
                             <h4 style=center>Our Father</h4>
                                                 𐲘𐳐 𐲀𐳨𐳁𐳙𐳓 𐳀𐳓𐳐 𐳀 𐳘𐳉𐳙𐳚𐳉𐳓𐳂𐳉𐳙 𐳮𐳀𐳎 <br />
