--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@
                 <div id="content-container" style="flex-grow: 1;">
                     <div class="wrapper">
                         <h1 style=center>Rovás Irás</h1>
-                            <h2 style=center>𐲘𐲐 𐲀𐲨𐲁𐲙𐲓</h2>
-                            <h3 style=center>Mi Atyánk</h3>
-                            <h4 style=center>Our Father</h4>
+                            <h2 style=centre>𐲘𐲐 𐲀𐲨𐲁𐲙𐲓</h2>
+                            <h3 style=centre>Mi Atyánk</h3>
+                            <h4 style=centre>Our Father</h4>
                                                 𐲘𐳐 𐲀𐳨𐳁𐳙𐳓 𐳀𐳓𐳐 𐳀 𐳘𐳉𐳙𐳚𐳉𐳓𐳂𐳉𐳙 𐳮𐳀𐳎 <br />
                                                 𐳥𐳉𐳙𐳦𐳉𐳖𐳦𐳉𐳤𐳤𐳋𐳓 𐳘𐳉𐳍 𐳀 𐳦𐳉 𐳙𐳉𐳮𐳉𐳇 <br />
                                                 𐳒𐳞𐳒𐳒𐳞𐳙 𐳉𐳖 𐳀 𐳦𐳉 𐳛𐳢𐳥𐳁𐳍𐳛𐳇 <br />
