--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
                 --font-size: 14px;
                 --line-height: 1.3em;
                 --font-color: black;
-                --link-color: #22506A;
+                --link-color: #363636;
                 --link-text-decoration: none;
 
                 /* main content (between sidebars) */
                 --content-padding: 25px;
-                --content-bg-color: #65CAFE;
+                --content-bg-color: #d2d2d2;
 
                 /* header */
                 --header-height: 150px;
@@ -23,21 +23,21 @@
                 --sidebar-margin: 10px;
                 --sidebar-width: 150px;
                 --sidebar-padding: 15px;
-                --sidebar-bg-color: #65CAFE;
+                --sidebar-bg-color: #d2d2d2;
 
                 /* footer */
                 --footer-height: 30px;
-                --footer-bg-color: #65CAFE;
+                --footer-bg-color: #d2d2d2;
 
                 /* navbar */
                 --navitems-alignment: center;
                 --space-between-navitems: 20px;
                 --navbar-margin-bottom: 10px;
-                --nav-bg-color: #65CAFE;
+                --nav-bg-color: #d2d2d2;
 
                 /* container */
                 --container-width: 800px;
-                --container-bg-color: #3DA2B7;
+                --container-bg-color: #e8e8e8;
 
                 /* controls the gap between the content and the footer */
                 --row-gap: 5px;
@@ -46,7 +46,7 @@
 
                 --sidebar-height: 100%;
                 --sidebar-overflow: hidden;
-                --background-color: #3DA2B7;
+                --background-color: #e8e8e8;
             }
 
             html,
