--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
                 /* header */
                 --header-height: 150px;
-                --header-background: url('https://pbs.twimg.com/media/EkTRaaMUwAAfh7I?format=jpg&name=large');
+                --header-background: url('https://i.pinimg.com/originals/c7/c4/48/c7c448613c0b8bc7c9a7af529d83c8d8.jpg');
                 --header-margin-bottom: 0px;
 
                 /* sidebar */
