--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@
                             <h2 style=text-align:center>𐲘𐲐 𐲀𐲨𐲁𐲙𐲓</h2>
                             <h3 style=text-align:center>Mi Atyánk</h3>
                             <h4 style=text-align:center>Our Father</h4>
+                            <p text-align:right>
                                                 𐲘𐳐 𐲀𐳨𐳁𐳙𐳓 𐳀𐳓𐳐 𐳀 𐳘𐳉𐳙𐳚𐳉𐳓𐳂𐳉𐳙 𐳮𐳀𐳎 <br />
                                                 𐳥𐳉𐳙𐳦𐳉𐳖𐳦𐳉𐳤𐳤𐳋𐳓 𐳘𐳉𐳍 𐳀 𐳦𐳉 𐳙𐳉𐳮𐳉𐳇 <br />
                                                 𐳒𐳞𐳒𐳒𐳞𐳙 𐳉𐳖 𐳀 𐳦𐳉 𐳛𐳢𐳥𐳁𐳍𐳛𐳇 <br />
@@ -247,6 +248,7 @@
                                                 𐲘𐳉𐳢𐳦 𐳦𐳐𐳋𐳇 𐳀𐳯 𐳛𐳢𐳥𐳁𐳍 𐳀 𐳏𐳀𐳦𐳀𐳖𐳛𐳘 𐳋𐳤 𐳀 𐳇𐳐𐳆𐳟𐳤𐳋𐳍 <br />
                                                 𐳘𐳐𐳙𐳇𐳞𐳢𐳞𐳓𐳓𐳋 <br />
                                                 𐲁𐳘𐳉𐳙 <br />
+                            </p>
                         </div>
                 </div>
                 <div id="right-sidebar" style="display: block;">
