--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                             <h2 style=text-align:center>𐲘𐲐 𐲀𐲨𐲁𐲙𐲓</h2>
                             <h3 style=text-align:center>Mi Atyánk</h3>
                             <h4 style=text-align:center>Our Father</h4>
-                            <p text-align:right>
+                            <p style=text-align:right>
                                                 𐲘𐳐 𐲀𐳨𐳁𐳙𐳓 𐳀𐳓𐳐 𐳀 𐳘𐳉𐳙𐳚𐳉𐳓𐳂𐳉𐳙 𐳮𐳀𐳎 <br />
                                                 𐳥𐳉𐳙𐳦𐳉𐳖𐳦𐳉𐳤𐳤𐳋𐳓 𐳘𐳉𐳍 𐳀 𐳦𐳉 𐳙𐳉𐳮𐳉𐳇 <br />
                                                 𐳒𐳞𐳒𐳒𐳞𐳙 𐳉𐳖 𐳀 𐳦𐳉 𐳛𐳢𐳥𐳁𐳍𐳛𐳇 <br />
