--- a/index.html
+++ b/index.html
@@ -237,35 +237,20 @@
                             <h2 style=text-align:center>𐲘𐲐 𐲀𐲨𐲁𐲙𐲓</h2>
                             <h3 style=text-align:center>Mi Atyánk</h3>
                             <h4 style=text-align:center>Our Father</h4>
-                            <p style=text-align:right>
-                                                𐲘𐳐 𐲀𐳨𐳁𐳙𐳓 𐳀𐳓𐳐 𐳀 𐳘𐳉𐳙𐳚𐳉𐳓𐳂𐳉𐳙 𐳮𐳀𐳎 <br />
-                                                𐳥𐳉𐳙𐳦𐳉𐳖𐳦𐳉𐳤𐳤𐳋𐳓 𐳘𐳉𐳍 𐳀 𐳦𐳉 𐳙𐳉𐳮𐳉𐳇 <br />
-                                                𐳒𐳞𐳒𐳒𐳞𐳙 𐳉𐳖 𐳀 𐳦𐳉 𐳛𐳢𐳥𐳁𐳍𐳛𐳇 <br />
-                                                𐳖𐳉𐳎𐳉𐳙 𐳘𐳉𐳍 𐳀 𐳦𐳉 𐳀𐳓𐳀𐳢𐳀𐳦𐳛𐳇 <br />
-                                                𐳀𐳘𐳐𐳙𐳦 𐳀 𐳘𐳉𐳙𐳚𐳂𐳉𐳙 𐳫𐳎 𐳀 𐳌𐳞𐳖𐳇𐳞𐳙 𐳐𐳤 <br />
-                                                𐲘𐳐𐳙𐳇𐳉𐳙𐳙𐳀𐳠𐳐 𐳓𐳉𐳚𐳉𐳢𐳬𐳙𐳓𐳉𐳦 𐳀𐳇𐳇 𐳘𐳉𐳍 𐳙𐳉𐳓𐳬𐳙𐳓 𐳘𐳀 <br />
-                                                𐳋𐳤 𐳂𐳛𐳆𐳁𐳤𐳇 𐳘𐳉𐳍 𐳮𐳋𐳦𐳓𐳉𐳐𐳙𐳓𐳉𐳦 <br /> 
-                                                𐳘𐳐𐳓𐳋𐳠𐳠𐳉𐳙 𐳘𐳐 𐳐𐳤 𐳘𐳉𐳍𐳂𐳛𐳆𐳁𐳦𐳪𐳙𐳓 <br />
-                                                𐳀𐳯 𐳉𐳖𐳖𐳉𐳙𐳬𐳙𐳓 𐳮𐳋𐳦𐳓𐳉𐳯𐳟𐳓𐳙𐳉𐳓 <br /> 
-                                                𐳋𐳤 𐳙𐳉 𐳮𐳑𐳎 𐳘𐳐𐳙𐳓𐳉𐳦 𐳓𐳑𐳤𐳋𐳢𐳦𐳋𐳤𐳂𐳉 <br />
-                                                𐳇𐳉 𐳥𐳀𐳂𐳀𐳇𐳑𐳦𐳤 𐳘𐳉𐳍 𐳀 𐳍𐳛𐳙𐳛𐳥𐳦𐳜𐳖 <br /> 
-                                                𐲘𐳉𐳢𐳦 𐳦𐳐𐳋𐳇 𐳀𐳯 𐳛𐳢𐳥𐳁𐳍 𐳀 𐳏𐳀𐳦𐳀𐳖𐳛𐳘 𐳋𐳤 𐳀 𐳇𐳐𐳆𐳟𐳤𐳋𐳍 <br />
-                                                𐳘𐳐𐳙𐳇𐳞𐳢𐳞𐳓𐳓𐳋 <br />
-                                                𐲁𐳘𐳉𐳙 <br />
-𐲘𐲐 𐲀𐲨𐲁𐲙𐲓 𐲀𐲓𐲐 𐲀 𐲘𐲉𐲙𐲚𐲉𐲓𐲂𐲉𐲙 𐲮𐲀𐲎     <br />
-𐲥𐲉𐲙𐲦𐲉𐲖𐲦𐲉𐲤𐲤𐲋𐲓 𐲘𐲉𐲍 𐲀 𐲦𐲉 𐲙𐲉𐲮𐲉𐲇      <br />
-𐲒𐲞𐲒𐲒𐲞𐲙 𐲉𐲖 𐲀 𐲦𐲉 𐲛𐲢𐲥𐲁𐲍𐲛𐲇           <br />
-𐲖𐲉𐲎𐲉𐲙 𐲘𐲉𐲍 𐲀 𐲦𐲉 𐲀𐲓𐲀𐲢𐲀𐲦𐲛𐲇          <br />
-𐲀𐲘𐲐𐲙𐲦 𐲀 𐲘𐲉𐲙𐲚𐲂𐲉𐲙 𐲫𐲎 𐲀 𐲌𐲞𐲖𐲇𐲞𐲙 𐲐𐲤  <br />
-𐲘𐲐𐲙𐲇𐲉𐲙𐲙𐲀𐲠𐲐 𐲓𐲉𐲚𐲉𐲢𐲬𐲙𐲓𐲉𐲦 𐲀𐲇𐲇 𐲘𐲉𐲍 𐲙𐲉𐲓𐲬𐲙𐲓 𐲘𐲀       <br />
-𐲋𐲤 𐲂𐲛𐲆𐲁𐲤𐲇 𐲘𐲉𐲍 𐲮𐲋𐲦𐲓𐲉𐲐𐲙𐲓𐲉𐲦        <br />
-𐲘𐲐𐲓𐲋𐲠𐲠𐲉𐲙 𐲘𐲐 𐲐𐲤 𐲘𐲉𐲍𐲂𐲛𐲆𐲁𐲦𐲪𐲙𐲓       <br />
-𐲀𐲯 𐲉𐲖𐲖𐲉𐲙𐲬𐲙𐲓 𐲮𐲋𐲦𐲓𐲉𐲯𐲟𐲓𐲙𐲉𐲓            <br />
-𐲋𐲤 𐲙𐲉 𐲮𐲑𐲎 𐲘𐲐𐲙𐲓𐲉𐲦 𐲓𐲑𐲤𐲋𐲢𐲦𐲋𐲤𐲂𐲉      <br />
-𐲇𐲉 𐲥𐲀𐲂𐲀𐲇𐲑𐲦𐲤 𐲘𐲉𐲍 𐲀 𐲍𐲛𐲙𐲛𐲥𐲦𐲜𐲖        <br />
-𐲘𐲉𐲢𐲦 𐲦𐲐𐲋𐲇 𐲀𐲯 𐲛𐲢𐲥𐲁𐲍 𐲀 𐲏𐲀𐲦𐲀𐲖𐲛𐲘 𐲋𐲤 𐲀 𐲇𐲐𐲆𐲟𐲤𐲋𐲍      <br />
-𐲘𐲐𐲙𐲇𐲞𐲢𐲞𐲓𐲓𐲋    <br />
-𐲁𐲘𐲉𐲙        <br />
+                            <p style=text-align:right>                            
+𐲘𐲐:‏𐲀𐲨𐲁𐲙𐲓:‏𐲀𐲓𐲐:‏𐲀:‏𐲘𐲉𐲙𐲚𐲉𐲓𐲂𐲉𐲙:‏𐲮𐲀𐲎                                      <br />
+𐲥𐲉𐲙𐲦𐲉𐲖𐲦𐲉𐲤𐲤𐲋𐲓:‏𐲘𐲉𐲍:‏𐲀:‏𐲦𐲉:‏𐲙𐲉𐲮𐲉𐲇                                        <br />
+𐲒𐲞𐲒𐲒𐲞𐲙:‏𐲉𐲖:‏𐲀:‏𐲦𐲉:‏𐲛𐲢𐲥𐲁𐲍𐲛𐲇                                             <br />
+𐲖𐲉𐲎𐲉𐲙:‏𐲘𐲉𐲍:‏𐲀:‏𐲦𐲉:‏𐲀𐲓𐲀𐲢𐲀𐲦𐲛𐲇                                           <br />
+𐲀𐲘𐲐𐲙𐲦:‏𐲀:‏𐲘𐲉𐲙𐲚𐲂𐲉𐲙:‏𐲫𐲎:‏𐲀:‏𐲌𐲞𐲖𐲇𐲞𐲙:‏𐲐𐲤                                  <br />
+𐲘𐲐𐲙𐲇𐲉𐲙𐲙𐲀𐲠𐲐:‏𐲓𐲉𐲚𐲉𐲢𐲬𐲙𐲓𐲉𐲦:‏𐲀𐲇𐲇:‏𐲘𐲉𐲍:‏𐲙𐲉𐲓𐲬𐲙𐲓:‏𐲘𐲀                          <br />
+𐲋𐲤:‏𐲂𐲛𐲆𐲁𐲤𐲇:‏𐲘𐲉𐲍:‏𐲮𐲋𐲦𐲓𐲉𐲐𐲙𐲓𐲉𐲦                                          <br />
+𐲘𐲐𐲓𐲋𐲠𐲠𐲉𐲙:‏𐲘𐲐:‏𐲐𐲤:‏𐲘𐲉𐲍𐲂𐲛𐲆𐲁𐲦𐲪𐲙𐲓                                        <br />
+𐲀𐲯:‏𐲉𐲖𐲖𐲉𐲙𐲬𐲙𐲓:‏𐲮𐲋𐲦𐲓𐲉𐲯𐲟𐲓𐲙𐲉𐲓                                           <br />
+𐲋𐲤:‏𐲙𐲉:‏𐲮𐲑𐲎:‏𐲘𐲐𐲙𐲓𐲉𐲦:‏𐲓𐲑𐲤𐲋𐲢𐲦𐲋𐲤𐲂𐲉                                      <br />
+𐲇𐲉:‏𐲥𐲀𐲂𐲀𐲇𐲑𐲦𐲤:‏𐲘𐲉𐲍:‏𐲀:‏𐲍𐲛𐲙𐲛𐲥𐲦𐲜𐲖                                        <br />
+𐲘𐲉𐲢𐲦:‏𐲦𐲐𐲋𐲇:‏𐲀𐲯:‏𐲛𐲢𐲥𐲁𐲍:‏𐲀:‏𐲏𐲀𐲦𐲀𐲖𐲛𐲘:‏𐲋𐲤:‏𐲀:‏𐲇𐲐𐲆𐲟𐲤𐲋𐲍:‏𐲘𐲐𐲙𐲇𐲞𐲢𐲞𐲓𐲓𐲋       <br />
+𐲁𐲘𐲉𐲙
                             </p>
                         </div>
                 </div>
