--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 𐲁𐲘𐲉𐲙
                                     </p>
 
-                            <h2 style=text-align:right>𐲤𐲗𐲜𐲯𐲀𐲦</h2>
+                            <h2 style=text-align:right>𐲥𐲜𐲯𐲀𐲦</h2>
                             <h3 style=text-align:right>(Szózat)</h3>
                             <p style=text-align:right>
 𐲏𐲀𐲯𐲁𐲇𐲙𐲀𐲓:‏𐲢𐲉𐲙𐲇𐲬𐲖𐲉𐲦𐲖𐲉𐲙𐲭𐲖                    <br />
