--- a/index.html
+++ b/index.html
@@ -456,12 +456,10 @@
                         </div>
                 </div>
                 <div id="right-sidebar" style="display: block;">
-                    <div class="sidebar-wrapper">Right Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Venenatis tellus in metus vulputate eu scelerisque. Duis
-                        at tellus at urna condimentum mattis pellentesque id. Mauris sit amet massa vitae tortor condimentum lacinia
-                        quis vel. Sit amet est placerat in egestas erat imperdiet sed euismod. Erat nam at lectus urna duis
-                        convallis convallis tellus id. Cursus eget nunc scelerisque viverra mauris in aliquam sem fringilla. Urna et
-                        pharetra pharetra massa massa ultricies mi.
+                    <div class="sidebar-wrapper">Rovás Irás volt a regi magyar irás rendszer ezer ellőt. A romai katalikus egyház befojása behozott a latin ábécé,
+                            és azért kiment a Rovás Irás hasznalata. Rovás Irás jobbról balról van le irva, vallószinúleg mert akkor minden fába és kőbe volt
+                            le irva, és konyebb és biztonságossab mint balról jobbról irás. Ez a honlap lényege hogy mi Magyarok kezdjunk használni megint
+                            a Rovás Irást, mert a mi őseink kitalátak ezt az irást, senki más.
                     </div>
                 </div>
             </div>
