--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<header>
+        <link rel="stylesheet" href="//oldhungarian.eu/stylesheets/oldhungarian.css" />
+</header>
+
+
         <style>
             :root {
                 /* These variables exist so you can make quick and simple style changes without much CSS knowledge */
