--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <header>
-        <link rel="stylesheet" href="//oldhungarian.eu/stylesheets/oldhungarian.css" />
+        <link rel="stylesheet" href="https://oldhungarian.eu/stylesheets/oldhungarian.css" />
 </header>
 
 
@@ -21,7 +21,7 @@
 
                 /* header */
                 --header-height: 150px;
-                --header-background: url('https://i.pinimg.com/originals/c7/c4/48/c7c448613c0b8bc7c9a7af529d83c8d8.jpg');
+                --header-background: url('c7c448613c0b8bc7c9a7af529d83c8d8.jpg');
                 --header-margin-bottom: 0px;
 
                 /* sidebar */
