--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <header>
-        <link rel="stylesheet" href="https://oldhungarian.eu/stylesheets/oldhungarian.css" />
+        <link rel="stylesheet" href="//oldhungarian.eu/stylesheets/oldhungarian.css"/>
 </header>
 
-
+<head>
+        <title>Rovás Irás | Old Hungarian</title>
+        <meta charset="UTF-8">
+        <meta name="description" content="Old Hungarian script (Rovás Irás) was the Hungarian script used primarily before the year 1000, 
+before the christianisation of Hungary. Due to Hungary converting to Roman Catholicism, it lead 
+to the language being Latinised and the removal of the old 'pagan' writing system.">
+        <meta name="keywords" content="Hungarian, Old Hungarian, Rovás Irás, Language, Writing">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
         <style>
             :root {
                 /* These variables exist so you can make quick and simple style changes without much CSS knowledge */
