--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ to the language being Latinised and the removal of the old 'pagan' writing syste
                         <h1 style=text-align:center>Rovás Irás</h1>
                             <h2 style=text-align:right>𐲘𐲐 𐲀𐲨𐲁𐲙𐲓</h2>
                             <h3 style=text-align:right>(Mi Atyánk)</h3>
-                            <p style=text-align:right>                            
+                            <font face = "OldHungarian" size = 20 style=text-align:right>                            
 𐲘𐲐:‏𐲀𐲨𐲁𐲙𐲓:‏𐲀𐲓𐲐:‏𐲀:‏𐲘𐲉𐲙𐲚𐲉𐲓𐲂𐲉𐲙:‏𐲮𐲀𐲎                                      <br />
 𐲥𐲉𐲙𐲦𐲉𐲖𐲦𐲉𐲤𐲤𐲋𐲓:‏𐲘𐲉𐲍:‏𐲀:‏𐲦𐲉:‏𐲙𐲉𐲮𐲉𐲇                                        <br />
 𐲒𐲞𐲒𐲒𐲞𐲙:‏𐲉𐲖:‏𐲀:‏𐲦𐲉:‏𐲛𐲢𐲥𐲁𐲍𐲛𐲇                                             <br />
@@ -260,7 +260,7 @@ to the language being Latinised and the removal of the old 'pagan' writing syste
 𐲇𐲉:‏𐲥𐲀𐲂𐲀𐲇𐲑𐲦𐲤:‏𐲘𐲉𐲍:‏𐲀:‏𐲍𐲛𐲙𐲛𐲥𐲦𐲜𐲖                                        <br />
 𐲘𐲉𐲢𐲦:‏𐲦𐲐𐲋𐲇:‏𐲀𐲯:‏𐲛𐲢𐲥𐲁𐲍:‏𐲀:‏𐲏𐲀𐲦𐲀𐲖𐲛𐲘:‏𐲋𐲤:‏𐲀:‏𐲇𐲐𐲆𐲟𐲤𐲋𐲍:‏𐲘𐲐𐲙𐲇𐲞𐲢𐲞𐲓𐲓𐲋       <br />
 𐲁𐲘𐲉𐲙
-                                    </p>
+                                    </font>
 
                             <h2 style=text-align:right>𐲥𐲜𐲯𐲀𐲦</h2>
                             <h3 style=text-align:right>(Szózat)</h3>
