--- a/index.html
+++ b/index.html
@@ -246,38 +246,38 @@ to the language being Latinised and the removal of the old 'pagan' writing syste
                         <h1 style=text-align:center>Rovás Irás</h1>
                             <h2 style=text-align:right>𐲘𐲐 𐲀𐲨𐲁𐲙𐲓</h2>
                             <h3 style=text-align:right>(Mi Atyánk)</h3>
-                            <font face = "OldHungarian" size = 8 style=text-align:right>                            
-𐲘𐲐:‏𐲀𐲨𐲁𐲙𐲓:‏𐲀𐲓𐲐:‏𐲀:‏𐲘𐲉𐲙𐲚𐲉𐲓𐲂𐲉𐲙:‏𐲮𐲀𐲎                                      <br />
-𐲥𐲉𐲙𐲦𐲉𐲖𐲦𐲉𐲤𐲤𐲋𐲓:‏𐲘𐲉𐲍:‏𐲀:‏𐲦𐲉:‏𐲙𐲉𐲮𐲉𐲇                                        <br />
-𐲒𐲞𐲒𐲒𐲞𐲙:‏𐲉𐲖:‏𐲀:‏𐲦𐲉:‏𐲛𐲢𐲥𐲁𐲍𐲛𐲇                                             <br />
-𐲖𐲉𐲎𐲉𐲙:‏𐲘𐲉𐲍:‏𐲀:‏𐲦𐲉:‏𐲀𐲓𐲀𐲢𐲀𐲦𐲛𐲇                                           <br />
-𐲀𐲘𐲐𐲙𐲦:‏𐲀:‏𐲘𐲉𐲙𐲚𐲂𐲉𐲙:‏𐲫𐲎:‏𐲀:‏𐲌𐲞𐲖𐲇𐲞𐲙:‏𐲐𐲤                                  <br />
-𐲘𐲐𐲙𐲇𐲉𐲙𐲙𐲀𐲠𐲐:‏𐲓𐲉𐲚𐲉𐲢𐲬𐲙𐲓𐲉𐲦:‏𐲀𐲇𐲇:‏𐲘𐲉𐲍:‏𐲙𐲉𐲓𐲬𐲙𐲓:‏𐲘𐲀                          <br />
-𐲋𐲤:‏𐲂𐲛𐲆𐲁𐲤𐲇:‏𐲘𐲉𐲍:‏𐲮𐲋𐲦𐲓𐲉𐲐𐲙𐲓𐲉𐲦                                          <br />
-𐲘𐲐𐲓𐲋𐲠𐲠𐲉𐲙:‏𐲘𐲐:‏𐲐𐲤:‏𐲘𐲉𐲍𐲂𐲛𐲆𐲁𐲦𐲪𐲙𐲓                                        <br />
-𐲀𐲯:‏𐲉𐲖𐲖𐲉𐲙𐲬𐲙𐲓:‏𐲮𐲋𐲦𐲓𐲉𐲯𐲟𐲓𐲙𐲉𐲓                                           <br />
-𐲋𐲤:‏𐲙𐲉:‏𐲮𐲑𐲎:‏𐲘𐲐𐲙𐲓𐲉𐲦:‏𐲓𐲑𐲤𐲋𐲢𐲦𐲋𐲤𐲂𐲉                                      <br />
-𐲇𐲉:‏𐲥𐲀𐲂𐲀𐲇𐲑𐲦𐲤:‏𐲘𐲉𐲍:‏𐲀:‏𐲍𐲛𐲙𐲛𐲥𐲦𐲜𐲖                                        <br />
-𐲘𐲉𐲢𐲦:‏𐲦𐲐𐲋𐲇:‏𐲀𐲯:‏𐲛𐲢𐲥𐲁𐲍:‏𐲀:‏𐲏𐲀𐲦𐲀𐲖𐲛𐲘:‏𐲋𐲤:‏𐲀:‏𐲇𐲐𐲆𐲟𐲤𐲋𐲍:‏𐲘𐲐𐲙𐲇𐲞𐲢𐲞𐲓𐲓𐲋       <br />
+                            <p style="font-family:OldHungarian" style="font-size:19px" style="text-align:right">                            
+𐲘𐲐:‏𐲀𐲨𐲁𐲙𐲓:‏𐲀𐲓𐲐:‏𐲀:‏𐲘𐲉𐲙𐲚𐲉𐲓𐲂𐲉𐲙:‏𐲮𐲀𐲎 <br />
+𐲥𐲉𐲙𐲦𐲉𐲖𐲦𐲉𐲤𐲤𐲋𐲓:‏𐲘𐲉𐲍:‏𐲀:‏𐲦𐲉:‏𐲙𐲉𐲮𐲉𐲇 <br />
+𐲒𐲞𐲒𐲒𐲞𐲙:‏𐲉𐲖:‏𐲀:‏𐲦𐲉:‏𐲛𐲢𐲥𐲁𐲍𐲛𐲇 <br />
+𐲖𐲉𐲎𐲉𐲙:‏𐲘𐲉𐲍:‏𐲀:‏𐲦𐲉:‏𐲀𐲓𐲀𐲢𐲀𐲦𐲛𐲇 <br />
+𐲀𐲘𐲐𐲙𐲦:‏𐲀:‏𐲘𐲉𐲙𐲚𐲂𐲉𐲙:‏𐲫𐲎:‏𐲀:‏𐲌𐲞𐲖𐲇𐲞𐲙:‏𐲐𐲤 <br />
+𐲘𐲐𐲙𐲇𐲉𐲙𐲙𐲀𐲠𐲐:‏𐲓𐲉𐲚𐲉𐲢𐲬𐲙𐲓𐲉𐲦:‏𐲀𐲇𐲇:‏𐲘𐲉𐲍:‏𐲙𐲉𐲓𐲬𐲙𐲓:‏𐲘𐲀 <br />
+𐲋𐲤:‏𐲂𐲛𐲆𐲁𐲤𐲇:‏𐲘𐲉𐲍:‏𐲮𐲋𐲦𐲓𐲉𐲐𐲙𐲓𐲉𐲦 <br />
+𐲘𐲐𐲓𐲋𐲠𐲠𐲉𐲙:‏𐲘𐲐:‏𐲐𐲤:‏𐲘𐲉𐲍𐲂𐲛𐲆𐲁𐲦𐲪𐲙𐲓 <br />
+𐲀𐲯:‏𐲉𐲖𐲖𐲉𐲙𐲬𐲙𐲓:‏𐲮𐲋𐲦𐲓𐲉𐲯𐲟𐲓𐲙𐲉𐲓 <br />
+𐲋𐲤:‏𐲙𐲉:‏𐲮𐲑𐲎:‏𐲘𐲐𐲙𐲓𐲉𐲦:‏𐲓𐲑𐲤𐲋𐲢𐲦𐲋𐲤𐲂𐲉 <br />
+𐲇𐲉:‏𐲥𐲀𐲂𐲀𐲇𐲑𐲦𐲤:‏𐲘𐲉𐲍:‏𐲀:‏𐲍𐲛𐲙𐲛𐲥𐲦𐲜𐲖 <br />
+𐲘𐲉𐲢𐲦:‏𐲦𐲐𐲋𐲇:‏𐲀𐲯:‏𐲛𐲢𐲥𐲁𐲍:‏𐲀:‏𐲏𐲀𐲦𐲀𐲖𐲛𐲘:‏𐲋𐲤:‏𐲀:‏𐲇𐲐𐲆𐲟𐲤𐲋𐲍:‏𐲘𐲐𐲙𐲇𐲞𐲢𐲞𐲓𐲓𐲋 <br />
 𐲁𐲘𐲉𐲙
-                                    </font>
+</p>
 
                             <h2 style=text-align:right>𐲥𐲜𐲯𐲀𐲦</h2>
                             <h3 style=text-align:right>(Szózat)</h3>
                             <font face = "OldHungarian" size = 8 style=text-align:right>
-𐲏𐲀𐲯𐲁𐲇𐲙𐲀𐲓:‏𐲢𐲉𐲙𐲇𐲬𐲖𐲉𐲦𐲖𐲉𐲙𐲭𐲖                    <br />
-𐲖𐲋𐲎:‏𐲏𐲑𐲮𐲉:‏𐲛𐲏:‏𐲘𐲀𐲎𐲀𐲢                   <br />
-𐲂𐲞𐲖𐲆𐲟𐲇:‏𐲀𐲯:‏𐲤:‏𐲘𐲀𐲒𐲇𐲀𐲙:‏𐲤𐲑𐲢𐲛𐲇:‏𐲐𐲤                   <br />
-𐲘𐲉𐲗:‏𐲁𐲠𐲛𐲖:‏𐲤:‏𐲉𐲖𐲦𐲀𐲓𐲀𐲢                   <br />
-                   <br />
-𐲀:‏𐲙𐲀𐲎:‏𐲮𐲐𐲖𐲁𐲍𐲛𐲙:‏𐲉:‏𐲓𐲑𐲮𐲬𐲖                   <br />
-𐲙𐲐𐲙𐲆𐲉𐲙:‏𐲥𐲁𐲘𐲛𐲇𐲢𐲀:‏𐲏𐲉𐲗                   <br />
-𐲁𐲖𐲇𐲒𐲛𐲙:‏𐲮𐲀𐲎:‏𐲮𐲉𐲢𐲒𐲉𐲙:‏𐲤𐲛𐲢𐲤:‏𐲓𐲉𐲯𐲉:‏                   <br />
-𐲐𐲦𐲦:‏𐲋𐲖𐲙𐲉𐲇:‏𐲏𐲀𐲖𐲙𐲛𐲇:‏𐲓𐲉𐲖𐲖                   <br />
-                   <br />
-𐲉𐲯:‏𐲀:‏𐲌𐲞𐲖𐲇:‏𐲘𐲉𐲗𐲉𐲙:‏𐲀𐲙𐲚𐲐𐲥𐲛𐲢                   <br />
-𐲀𐲠𐲁𐲐𐲇:‏𐲮𐲋𐲢𐲉:‏𐲌𐲛𐲗𐲦                   <br />
-𐲉𐲯:‏𐲘𐲉𐲗𐲏𐲉𐲯:‏𐲘𐲐𐲙𐲇𐲉𐲙:‏𐲥𐲉𐲙𐲦:‏𐲙𐲉𐲮𐲉𐲦                   <br />
+𐲏𐲀𐲯𐲁𐲇𐲙𐲀𐲓:‏𐲢𐲉𐲙𐲇𐲬𐲖𐲉𐲦𐲖𐲉𐲙𐲭𐲖 <br />
+𐲖𐲋𐲎:‏𐲏𐲑𐲮𐲉:‏𐲛𐲏:‏𐲘𐲀𐲎𐲀𐲢 <br />
+𐲂𐲞𐲖𐲆𐲟𐲇:‏𐲀𐲯:‏𐲤:‏𐲘𐲀𐲒𐲇𐲀𐲙:‏𐲤𐲑𐲢𐲛𐲇:‏𐲐𐲤 <br />
+𐲘𐲉𐲗:‏𐲁𐲠𐲛𐲖:‏𐲤:‏𐲉𐲖𐲦𐲀𐲓𐲀𐲢 <br />
+<br />
+𐲀:‏𐲙𐲀𐲎:‏𐲮𐲐𐲖𐲁𐲍𐲛𐲙:‏𐲉:‏𐲓𐲑𐲮𐲬𐲖 <br />
+𐲙𐲐𐲙𐲆𐲉𐲙:‏𐲥𐲁𐲘𐲛𐲇𐲢𐲀:‏𐲏𐲉𐲗 <br />
+𐲁𐲖𐲇𐲒𐲛𐲙:‏𐲮𐲀𐲎:‏𐲮𐲉𐲢𐲒𐲉𐲙:‏𐲤𐲛𐲢𐲤:‏𐲓𐲉𐲯𐲉:‏ <br />
+𐲐𐲦𐲦:‏𐲋𐲖𐲙𐲉𐲇:‏𐲏𐲀𐲖𐲙𐲛𐲇:‏𐲓𐲉𐲖𐲖 <br />
+<br />
+𐲉𐲯:‏𐲀:‏𐲌𐲞𐲖𐲇:‏𐲘𐲉𐲗𐲉𐲙:‏𐲀𐲙𐲚𐲐𐲥𐲛𐲢 <br />
+𐲀𐲠𐲁𐲐𐲇:‏𐲮𐲋𐲢𐲉:‏𐲌𐲛𐲗𐲦 <br />
+𐲉𐲯:‏𐲘𐲉𐲗𐲏𐲉𐲯:‏𐲘𐲐𐲙𐲇𐲉𐲙:‏𐲥𐲉𐲙𐲦:‏𐲙𐲉𐲮𐲉𐲦 <br />
 𐲉𐲎:‏𐲉𐲯𐲢𐲉𐲇𐲋𐲮:‏𐲆𐲀𐲦𐲛𐲖𐲦                   <br />
                    <br />
 𐲐𐲦𐲦:‏𐲓𐲬𐲯𐲇𐲦𐲉𐲙𐲉𐲓:‏𐲏𐲛𐲙𐲋𐲢𐲦:‏𐲀:‏𐲏𐲟𐲤                   <br />
