--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ to the language being Latinised and the removal of the old 'pagan' writing syste
                         <h1 style=text-align:center>Rovás Irás</h1>
                             <h2 style=text-align:right>𐲘𐲐 𐲀𐲨𐲁𐲙𐲓</h2>
                             <h3 style=text-align:right>(Mi Atyánk)</h3>
-                            <p style="font-family:OldHungarian" style="font-size:19px" style="text-align:right">                            
+                            <p style="text-align:right" style="font-family:OldHungarian" style="font-size:19px">                            
 𐲘𐲐:‏𐲀𐲨𐲁𐲙𐲓:‏𐲀𐲓𐲐:‏𐲀:‏𐲘𐲉𐲙𐲚𐲉𐲓𐲂𐲉𐲙:‏𐲮𐲀𐲎 <br />
 𐲥𐲉𐲙𐲦𐲉𐲖𐲦𐲉𐲤𐲤𐲋𐲓:‏𐲘𐲉𐲍:‏𐲀:‏𐲦𐲉:‏𐲙𐲉𐲮𐲉𐲇 <br />
 𐲒𐲞𐲒𐲒𐲞𐲙:‏𐲉𐲖:‏𐲀:‏𐲦𐲉:‏𐲛𐲢𐲥𐲁𐲍𐲛𐲇 <br />
@@ -264,7 +264,7 @@ to the language being Latinised and the removal of the old 'pagan' writing syste
 
                             <h2 style=text-align:right>𐲥𐲜𐲯𐲀𐲦</h2>
                             <h3 style=text-align:right>(Szózat)</h3>
-                            <font face = "OldHungarian" size = 8 style=text-align:right>
+                            <p style="text-align:right" style="font-family:OldHungarian" style="font-size:19px">
 𐲏𐲀𐲯𐲁𐲇𐲙𐲀𐲓:‏𐲢𐲉𐲙𐲇𐲬𐲖𐲉𐲦𐲖𐲉𐲙𐲭𐲖 <br />
 𐲖𐲋𐲎:‏𐲏𐲑𐲮𐲉:‏𐲛𐲏:‏𐲘𐲀𐲎𐲀𐲢 <br />
 𐲂𐲞𐲖𐲆𐲟𐲇:‏𐲀𐲯:‏𐲤:‏𐲘𐲀𐲒𐲇𐲀𐲙:‏𐲤𐲑𐲢𐲛𐲇:‏𐲐𐲤 <br />
@@ -334,11 +334,11 @@ to the language being Latinised and the removal of the old 'pagan' writing syste
 𐲙𐲐𐲙𐲆𐲉𐲙:‏𐲥𐲁𐲘𐲛𐲇𐲢𐲀:‏𐲏𐲉𐲗                   <br />
 𐲁𐲖𐲇𐲒𐲛𐲙:‏𐲮𐲀𐲎:‏𐲮𐲉𐲢𐲒𐲉𐲙:‏𐲤𐲛𐲢𐲤:‏𐲓𐲉𐲯𐲉:‏                   <br />
 𐲐𐲦𐲦:‏𐲋𐲖𐲙𐲉𐲇:‏𐲏𐲀𐲖𐲙𐲛𐲇:‏𐲓𐲉𐲖𐲖                   <br />
-</font>
+</p>
                             
                            <h2 style=text-align:right>𐲏𐲐𐲘𐲙𐲪𐲥</h2>
                             <h3 style=text-align:right>(Himnusz)</h3>
-                            <font face = "OldHungarian" size = 8 style=text-align:right>
+                            <p style="text-align:right" style="font-family:OldHungarian" style="font-size:19px">
 𐳺                   <br />
 𐲐𐲤𐲦𐲉𐲙:‏𐲁𐲖𐲇𐲇:‏𐲘𐲉𐲍:‏𐲀:‏𐲘𐲀𐲎𐲀𐲢𐲦                   <br />
 𐲒𐲜:‏𐲓𐲉𐲇𐲮𐲮𐲉𐲖:‏𐲂𐲟𐲤𐲋𐲍𐲍𐲉𐲖                   <br />
@@ -418,10 +418,10 @@ to the language being Latinised and the removal of the old 'pagan' writing syste
 𐲏𐲛𐲯𐲯:‏𐲢𐲁:‏𐲮𐲑𐲍:‏𐲉𐲥𐲦𐲉𐲙𐲇𐲟𐲦 <br />
 𐲘𐲉𐲍𐲂𐲭𐲙𐲏𐲟𐲇𐲦𐲉:‏𐲘𐲁𐲢:‏𐲉:‏𐲙𐲋𐲠 <br />
 𐲀:‏𐲘𐲫𐲖𐲦𐲀𐲦:‏𐲤:‏𐲒𐲞𐲮𐲉𐲙𐲇𐲟𐲦 <br />
-</font>  
+</p>  ont
                             <h2 style=text-align:right>𐲥𐲋𐲓𐲉𐲗 𐲏𐲐𐲘𐲙𐲪𐲥</h2>
                             <h3 style=text-align:right>(Székely Himnusz)</h3>
-                            <font face = "OldHungarian" size = 8 style=text-align:right>
+                            <p style="text-align:right" style="font-family:OldHungarian" style="font-size:19px">
 𐲓𐲐:‏𐲦𐲪𐲇𐲒𐲀:‏𐲘𐲉𐲢𐲢𐲉:‏𐲘𐲉𐲢𐲢𐲉:‏𐲮𐲐𐲥:‏𐲀:‏𐲮𐲋𐲍𐲯𐲉𐲦                   <br />
 𐲍𐲞𐲢𐲞𐲙𐲎𐲞𐲤:‏𐲫𐲦𐲛𐲙:‏𐲤𐲞𐲦𐲋𐲦:‏𐲋𐲒𐲒𐲉𐲖𐲉𐲙                   <br />
 𐲮𐲉𐲯𐲉𐲤𐲇:‏𐲘𐲋𐲍:‏𐲉𐲎𐲥𐲉𐲢:‏𐲎𐲟𐲯𐲉𐲖𐲉𐲘𐲢𐲉:‏𐲙𐲋𐲠𐲉𐲇                   <br />
@@ -466,7 +466,7 @@ to the language being Latinised and the removal of the old 'pagan' writing syste
 𐲙𐲋𐲠𐲉𐲓:‏𐲏𐲀𐲢𐲄𐲁𐲙𐲀𐲓:‏𐲯𐲀𐲒𐲖𐲜:‏𐲦𐲉𐲙𐲍𐲉𐲢𐲋𐲙                   <br />
 𐲌𐲉𐲒𐲬𐲙𐲓:‏𐲀𐲯:‏𐲁𐲢:‏𐲒𐲀𐲒:‏𐲥𐲁𐲯𐲥𐲛𐲢:‏𐲉𐲖𐲂𐲛𐲢𐲑𐲦𐲒𐲀                   <br />
 𐲙𐲉:‏𐲏𐲀𐲎𐲇:‏𐲉𐲖𐲮𐲉𐲥𐲙𐲐:‏𐲉𐲢𐲇𐲋𐲗𐲦:‏𐲐𐲤𐲦𐲉𐲙𐲬𐲙𐲓                   <br />
-</font>
+</p>
                         </div>
                 </div>
                 <div id="right-sidebar" style="display: block;">
