--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ to the language being Latinised and the removal of the old 'pagan' writing syste
                         <h1 style=text-align:center>Rovás Irás</h1>
                             <h2 style=text-align:right>𐲘𐲐 𐲀𐲨𐲁𐲙𐲓</h2>
                             <h3 style=text-align:right>(Mi Atyánk)</h3>
-                            <p style="text-align:right" style="font-family:OldHungarian" style="font-size:19px">                            
+                            <p style="text-align:right;font-family:OldHungarian;font-size:19px">                            
 𐲘𐲐:‏𐲀𐲨𐲁𐲙𐲓:‏𐲀𐲓𐲐:‏𐲀:‏𐲘𐲉𐲙𐲚𐲉𐲓𐲂𐲉𐲙:‏𐲮𐲀𐲎 <br />
 𐲥𐲉𐲙𐲦𐲉𐲖𐲦𐲉𐲤𐲤𐲋𐲓:‏𐲘𐲉𐲍:‏𐲀:‏𐲦𐲉:‏𐲙𐲉𐲮𐲉𐲇 <br />
 𐲒𐲞𐲒𐲒𐲞𐲙:‏𐲉𐲖:‏𐲀:‏𐲦𐲉:‏𐲛𐲢𐲥𐲁𐲍𐲛𐲇 <br />
@@ -264,7 +264,7 @@ to the language being Latinised and the removal of the old 'pagan' writing syste
 
                             <h2 style=text-align:right>𐲥𐲜𐲯𐲀𐲦</h2>
                             <h3 style=text-align:right>(Szózat)</h3>
-                            <p style="text-align:right" style="font-family:OldHungarian" style="font-size:19px">
+                            <p style="text-align:right;font-family:OldHungarian;font-size:19px">
 𐲏𐲀𐲯𐲁𐲇𐲙𐲀𐲓:‏𐲢𐲉𐲙𐲇𐲬𐲖𐲉𐲦𐲖𐲉𐲙𐲭𐲖 <br />
 𐲖𐲋𐲎:‏𐲏𐲑𐲮𐲉:‏𐲛𐲏:‏𐲘𐲀𐲎𐲀𐲢 <br />
 𐲂𐲞𐲖𐲆𐲟𐲇:‏𐲀𐲯:‏𐲤:‏𐲘𐲀𐲒𐲇𐲀𐲙:‏𐲤𐲑𐲢𐲛𐲇:‏𐲐𐲤 <br />
@@ -338,7 +338,7 @@ to the language being Latinised and the removal of the old 'pagan' writing syste
                             
                            <h2 style=text-align:right>𐲏𐲐𐲘𐲙𐲪𐲥</h2>
                             <h3 style=text-align:right>(Himnusz)</h3>
-                            <p style="text-align:right" style="font-family:OldHungarian" style="font-size:19px">
+                            <p style="text-align:right;font-family:OldHungarian;font-size:19px">
 𐳺                   <br />
 𐲐𐲤𐲦𐲉𐲙:‏𐲁𐲖𐲇𐲇:‏𐲘𐲉𐲍:‏𐲀:‏𐲘𐲀𐲎𐲀𐲢𐲦                   <br />
 𐲒𐲜:‏𐲓𐲉𐲇𐲮𐲮𐲉𐲖:‏𐲂𐲟𐲤𐲋𐲍𐲍𐲉𐲖                   <br />
@@ -418,10 +418,10 @@ to the language being Latinised and the removal of the old 'pagan' writing syste
 𐲏𐲛𐲯𐲯:‏𐲢𐲁:‏𐲮𐲑𐲍:‏𐲉𐲥𐲦𐲉𐲙𐲇𐲟𐲦 <br />
 𐲘𐲉𐲍𐲂𐲭𐲙𐲏𐲟𐲇𐲦𐲉:‏𐲘𐲁𐲢:‏𐲉:‏𐲙𐲋𐲠 <br />
 𐲀:‏𐲘𐲫𐲖𐲦𐲀𐲦:‏𐲤:‏𐲒𐲞𐲮𐲉𐲙𐲇𐲟𐲦 <br />
-</p>  ont
+</p>
                             <h2 style=text-align:right>𐲥𐲋𐲓𐲉𐲗 𐲏𐲐𐲘𐲙𐲪𐲥</h2>
                             <h3 style=text-align:right>(Székely Himnusz)</h3>
-                            <p style="text-align:right" style="font-family:OldHungarian" style="font-size:19px">
+                            <p style="text-align:right;font-family:OldHungarian;font-size:19px">
 𐲓𐲐:‏𐲦𐲪𐲇𐲒𐲀:‏𐲘𐲉𐲢𐲢𐲉:‏𐲘𐲉𐲢𐲢𐲉:‏𐲮𐲐𐲥:‏𐲀:‏𐲮𐲋𐲍𐲯𐲉𐲦                   <br />
 𐲍𐲞𐲢𐲞𐲙𐲎𐲞𐲤:‏𐲫𐲦𐲛𐲙:‏𐲤𐲞𐲦𐲋𐲦:‏𐲋𐲒𐲒𐲉𐲖𐲉𐲙                   <br />
 𐲮𐲉𐲯𐲉𐲤𐲇:‏𐲘𐲋𐲍:‏𐲉𐲎𐲥𐲉𐲢:‏𐲎𐲟𐲯𐲉𐲖𐲉𐲘𐲢𐲉:‏𐲙𐲋𐲠𐲉𐲇                   <br />
